--- a/index.html
+++ b/index.html
@@ -3,38 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Vipul Sureka's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Page</h1>
+        <div class="header-content">
+            <h1>Welcome to My Portfolio</h1>
+        </div>
     </header>
     
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I’m [Your Name]. I’m currently working as a Consultant at Deloitte India. I love playing sports like cricket, badminton, and table tennis. I’m also interested in Data Science and Indian history texts.</p>
-    </section>
+    <main>
+        <div class="profile-container">
+            <img src="dp.jpg" alt="Profile Picture" class="profile-img">
+            <h2>Vipul Sureka</h2>
+            <p>Consultant at Deloitte | Data Science Enthusiast</p>
+        </div>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Data Science</li>
-            <li>SQL</li>
-            <li>Python</li>
-            <li>Power BI</li>
-            <li>Excel</li>
-            <li>Statistics</li>
-        </ul>
-    </section>
+        <section class="about">
+            <h3>About Me</h3>
+            <p>I am a Consultant at Deloitte India with a passion for data science, sports, and Indian history. I am currently exploring opportunities to grow my skills in data science.</p>
+        </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>You can reach me at [Your Email].</p>
-    </section>
-
+        <!-- Add more sections as needed -->
+    </main>
+    
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Vipul Sureka. All rights reserved.</p>
     </footer>
 </body>
 </html>
