--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <main>
         <div class="profile-container">
-            <img src="dp.jpg" alt="Profile Picture" class="profile-img">
+            <img src="dp.png" alt="Profile Picture" class="profile-img">
             <h2>Vipul Sureka</h2>
             <p>Consultant at Deloitte | Data Science Enthusiast</p>
         </div>
