--- a/index.html
+++ b/index.html
@@ -9,24 +9,80 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Welcome to My Portfolio</h1>
+            <img src="dp.png" alt="Profile Picture" class="profile-img">
+            <h1>Vipul Sureka</h1>
+            <p>Consultant at Deloitte | Data Science Enthusiast</p>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     
     <main>
-        <div class="profile-container">
-            <img src="dp.png" alt="Profile Picture" class="profile-img">
-            <h2>Vipul Sureka</h2>
-            <p>Consultant at Deloitte | Data Science Enthusiast</p>
-        </div>
-
-        <section class="about">
-            <h3>About Me</h3>
-            <p>I am a Consultant at Deloitte India with a passion for data science, sports, and Indian history. I am currently exploring opportunities to grow my skills in data science.</p>
+        <section id="home">
+            <h2>Welcome</h2>
+            <p>Welcome to my portfolio. I am a Consultant at Deloitte India with a passion for data science, sports, and Indian history.</p>
         </section>
 
-        <!-- Add more sections as needed -->
+        <section id="services">
+            <h2>Services</h2>
+            <p>Here are some of the services I offer:</p>
+            <ul>
+                <li>Data Analysis and Visualization</li>
+                <li>Business Intelligence Solutions</li>
+                <li>Consulting and Strategy</li>
+            </ul>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>My skill set includes:</p>
+            <ul>
+                <li>Data Science</li>
+                <li>Python and R</li>
+                <li>SQL and PowerBI</li>
+                <li>Machine Learning</li>
+                <li>Excel and Azure</li>
+            </ul>
+        </section>
+
+        <section id="education">
+            <h2>Education</h2>
+            <p>Here is a summary of my educational background:</p>
+            <ul>
+                <li>Bachelor's in Computer Science</li>
+                <li>Master's in Data Science (In Progress)</li>
+            </ul>
+        </section>
+
+        <section id="experience">
+            <h2>Experience</h2>
+            <p>My professional experience includes:</p>
+            <ul>
+                <li>Consultant at Deloitte India</li>
+                <li>Previous roles in data analytics and business intelligence</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>You can reach me through the following methods:</p>
+            <ul>
+                <li>Email: your-email@example.com</li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn Profile</a></li>
+            </ul>
+        </section>
     </main>
-    
+
+    <footer>
+        <p>&copy; 2024 Vipul Sureka. All rights reserved.</p>
+    </footer>
 </body>
 </html>
