--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <img src="dp.png" alt="Profile Picture" class="profile-img">
-            <h1>Vipul Sureka</h1>
-            <p>Consultant at Deloitte | Data Science Enthusiast</p>
+        <div class="container">
+            <div class="profile">
+                <img src="dp.png" alt="Profile Picture" class="profile-img">
+                <h1>Vipul Sureka</h1>
+                <p>Consultant at Deloitte | Data Science Enthusiast</p>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -26,14 +28,13 @@
     </header>
     
     <main>
-        <section id="home">
+        <section id="home" class="section">
             <h2>Welcome</h2>
             <p>Welcome to my portfolio. I am a Consultant at Deloitte India with a passion for data science, sports, and Indian history.</p>
         </section>
 
-        <section id="services">
+        <section id="services" class="section">
             <h2>Services</h2>
-            <p>Here are some of the services I offer:</p>
             <ul>
                 <li>Data Analysis and Visualization</li>
                 <li>Business Intelligence Solutions</li>
@@ -41,9 +42,8 @@
             </ul>
         </section>
 
-        <section id="skills">
+        <section id="skills" class="section">
             <h2>Skills</h2>
-            <p>My skill set includes:</p>
             <ul>
                 <li>Data Science</li>
                 <li>Python and R</li>
@@ -53,29 +53,26 @@
             </ul>
         </section>
 
-        <section id="education">
+        <section id="education" class="section">
             <h2>Education</h2>
-            <p>Here is a summary of my educational background:</p>
             <ul>
                 <li>Bachelor's in Computer Science</li>
                 <li>Master's in Data Science (In Progress)</li>
             </ul>
         </section>
 
-        <section id="experience">
+        <section id="experience" class="section">
             <h2>Experience</h2>
-            <p>My professional experience includes:</p>
             <ul>
                 <li>Consultant at Deloitte India</li>
                 <li>Previous roles in data analytics and business intelligence</li>
             </ul>
         </section>
 
-        <section id="contact">
+        <section id="contact" class="section">
             <h2>Contact</h2>
-            <p>You can reach me through the following methods:</p>
             <ul>
-                <li>Email: your-email@example.com</li>
+                <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn Profile</a></li>
             </ul>
         </section>
