--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <section id="contact" class="section">
             <h2>Contact</h2>
             <ul>
-                <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn Profile</a></li>
+                <li>Gmail: <a href="mailto:vipulsureka246@gmail">your-email@example.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/vipulsureka/" target="_blank">LinkedIn Profile</a></li>
             </ul>
         </section>
     </main>
