--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
         </div>
     </header>
-
+    
     <main>
         <section id="home" class="section">
             <h2>Welcome</h2>
@@ -46,4 +46,40 @@
             <h2>Skills</h2>
             <ul>
                 <li>Data Science</li>
-               
+                <li>Python and R</li>
+                <li>SQL and PowerBI</li>
+                <li>Machine Learning</li>
+                <li>Excel and Azure</li>
+            </ul>
+        </section>
+
+        <section id="education" class="section">
+            <h2>Education</h2>
+            <ul>
+                <li>Bachelor's in Computer Science</li>
+                <li>Master's in Data Science (In Progress)</li>
+            </ul>
+        </section>
+
+        <section id="experience" class="section">
+            <h2>Experience</h2>
+            <ul>
+                <li>Consultant at Deloitte India</li>
+                <li>Previous roles in data analytics and business intelligence</li>
+            </ul>
+        </section>
+
+        <section id="contact" class="section">
+            <h2>Contact</h2>
+            <ul>
+                <li>Email: <a href="mailto:vipulsureka246@gmail.com">vipulsureka246@gmail.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/vipulsureka/" target="_blank">LinkedIn Profile</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Vipul Sureka. All rights reserved.</p>
+    </footer>
+</body>
+</html>
