--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
             <h2>Skills</h2>
             <ul>
                 <li>Data Science</li>
-                <li>Python and R</li>
-                <li>SQL and PowerBI</li>
+                <li>Python</li>
+                <li>SQL</li>
+                <li>PowerBI</li>
                 <li>Machine Learning</li>
-                <li>Excel and Azure</li>
+                <li>Excel</li>
+                <li>Azure</li>
             </ul>
         </section>
 
@@ -57,7 +59,7 @@
             <h2>Education</h2>
             <ul>
                 <li>Bachelor's in Computer Science</li>
-                <li>Master's in Data Science (In Progress)</li>
+                <li>Manipal Institute of Technology, Manipal</li>
             </ul>
         </section>
 
