--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section id="education" class="section">
             <h2>Education</h2>
             <ul>
-                <li>Bachelor's in Computer Science</li>
+                <li>Bachelor's in Mechanical Engineering</li>
                 <li>Manipal Institute of Technology, Manipal</li>
             </ul>
         </section>
