--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             <ul>
                 <li>Email: <a href="mailto:vipulsureka246@gmail.com">vipulsureka246@gmail.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/vipulsureka/" target="_blank">LinkedIn Profile</a></li>
+                <li><a href="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" class="download-btn" download>Download CV</a></li>
+
             </ul>
         </section>
     </main>
