--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipul Sureka's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -22,6 +23,7 @@
                     <li><a href="#education">Education</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#resume">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -75,9 +77,17 @@
             <ul>
                 <li>Email: <a href="mailto:vipulsureka246@gmail.com">vipulsureka246@gmail.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/vipulsureka/" target="_blank">LinkedIn Profile</a></li>
-                <li><a href="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" class="download-btn" download>Download CV</a></li>
-
             </ul>
+        </section>
+
+        <section id="resume" class="section">
+            <h2>Resume</h2>
+            <p>You can download my resume using the icon in the top right corner.</p>
+            <div class="download-icon" title="Download Resume">
+                <a href="https://raw.githubusercontent.com/username/repository/branch/path/to/cv.pdf" download>
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
         </section>
     </main>
 
