--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,7 @@
             height: 90vh; /* Make room for the icon */
             overflow: auto;
             border: 1px solid #ccc; /* Optional: Add a border */
+            background-color: #fff; /* Ensure the background is white */
         }
         .download-icon {
             position: absolute;
@@ -35,17 +36,19 @@
         .download-icon:hover a {
             color: #007bff; /* Change color on hover */
         }
+        iframe {
+            border: none; /* Remove iframe border */
+        }
     </style>
 </head>
 <body>
     <div class="pdf-container">
         <div class="download-icon" title="Download Resume">
             <a href="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" download>
-
                 <i class="fas fa-download"></i>
             </a>
         </div>
-        <iframe src="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf&embedded=true" width="100%" height="100%"></iframe>
     </div>
 </body>
 </html>
