--- a/resume.html
+++ b/resume.html
@@ -18,10 +18,11 @@
             position: relative;
             width: 100%;
             max-width: 800px; /* Adjust as needed */
-            height: 90vh; /* Make room for the icon */
-            overflow: auto;
+            height: auto; /* Adjust height */
             border: 1px solid #ccc; /* Optional: Add a border */
             background-color: #fff; /* Ensure the background is white */
+            padding: 20px; /* Add some padding */
+            text-align: center; /* Center align the content */
         }
         .download-icon {
             position: absolute;
@@ -36,8 +37,9 @@
         .download-icon:hover a {
             color: #007bff; /* Change color on hover */
         }
-        iframe {
-            border: none; /* Remove iframe border */
+        .pdf-link {
+            margin-top: 20px; /* Space above the link */
+            display: block; /* Ensure it’s block-level */
         }
     </style>
 </head>
@@ -48,7 +50,9 @@
                 <i class="fas fa-download"></i>
             </a>
         </div>
-        <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf&embedded=true" width="100%" height="100%"></iframe>
+        <h2>View My Resume</h2>
+        <p>Click the link below to view or download my resume:</p>
+        <a class="pdf-link" href="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" target="_blank">Open Resume PDF</a>
     </div>
 </body>
 </html>
