--- a/resume.html
+++ b/resume.html
@@ -18,11 +18,11 @@
             position: relative;
             width: 100%;
             max-width: 800px; /* Adjust as needed */
-            height: auto; /* Adjust height */
+            height: 90vh; /* Make room for the icon */
             border: 1px solid #ccc; /* Optional: Add a border */
             background-color: #fff; /* Ensure the background is white */
-            padding: 20px; /* Add some padding */
-            text-align: center; /* Center align the content */
+            padding: 10px; /* Add some padding */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
         }
         .download-icon {
             position: absolute;
@@ -37,10 +37,6 @@
         .download-icon:hover a {
             color: #007bff; /* Change color on hover */
         }
-        .pdf-link {
-            margin-top: 20px; /* Space above the link */
-            display: block; /* Ensure it’s block-level */
-        }
     </style>
 </head>
 <body>
@@ -50,9 +46,7 @@
                 <i class="fas fa-download"></i>
             </a>
         </div>
-        <h2>View My Resume</h2>
-        <p>Click the link below to view or download my resume:</p>
-        <a class="pdf-link" href="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" target="_blank">Open Resume PDF</a>
+        <embed src="https://raw.githubusercontent.com/Vipul-Sureka/resume/refs/heads/main/Vipul_Sureka_SeniorDataAnalyst.pdf" type="application/pdf" width="100%" height="100%" />
     </div>
 </body>
 </html>
