--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background-color: #eef2f3;
+            background-color: #eef2f3; /* Light background color */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -17,12 +17,12 @@
         .pdf-container {
             position: relative;
             width: 100%;
-            max-width: 800px;
-            height: 90vh;
-            border: 1px solid #ccc;
-            background-color: #fff;
-            padding: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px; /* Adjust as needed */
+            height: 90vh; /* Make room for the icon */
+            border: 1px solid #ccc; /* Optional: Add a border */
+            background-color: #fff; /* Ensure the background is white */
+            padding: 10px; /* Add some padding */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
         }
         .download-icon {
             position: absolute;
@@ -30,23 +30,23 @@
             right: 10px;
         }
         .download-icon a {
-            color: #555;
-            font-size: 24px;
+            color: #555; /* Icon color */
+            font-size: 24px; /* Icon size */
             text-decoration: none;
         }
         .download-icon:hover a {
-            color: #007bff;
+            color: #007bff; /* Change color on hover */
         }
     </style>
 </head>
 <body>
     <div class="pdf-container">
         <div class="download-icon" title="Download Resume">
-            <a href="https://github.com/Vipul-Sureka/resume/raw/main/Vipul_Sureka_SeniorDataAnalyst.pdf" download>
+            <a href="https://vipul-sureka.github.io/resume/Vipul_Sureka_SeniorDataAnalyst.pdf" download>
                 <i class="fas fa-download"></i>
             </a>
         </div>
-        <embed src="https://github.com/Vipul-Sureka/resume/raw/main/Vipul_Sureka_SeniorDataAnalyst.pdf" type="application/pdf" width="100%" height="100%" />
+        <embed src="https://vipul-sureka.github.io/resume/Vipul_Sureka_SeniorDataAnalyst.pdf" type="application/pdf" width="100%" height="100%" />
     </div>
 </body>
 </html>
