--- a/resume.html
+++ b/resume.html
@@ -4,49 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Vipul Sureka</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background-color: #eef2f3; /* Light background color */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
+            height: 100vh; /* Use full viewport height */
+            overflow: hidden; /* Hide scrollbars */
         }
-        .pdf-container {
-            position: relative;
+        embed {
             width: 100%;
-            max-width: 800px; /* Adjust as needed */
-            height: 90vh; /* Make room for the icon */
-            border: 1px solid #ccc; /* Optional: Add a border */
-            background-color: #fff; /* Ensure the background is white */
-            padding: 10px; /* Add some padding */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
-        }
-        .download-icon {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-        .download-icon a {
-            color: #555; /* Icon color */
-            font-size: 24px; /* Icon size */
-            text-decoration: none;
-        }
-        .download-icon:hover a {
-            color: #007bff; /* Change color on hover */
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <div class="pdf-container">
-        <div class="download-icon" title="Download Resume">
-            <a href="https://vipul-sureka.github.io/resume/Vipul_Sureka_SeniorDataAnalyst.pdf" download>
-                <i class="fas fa-download"></i>
-            </a>
-        </div>
-        <embed src="https://vipul-sureka.github.io/resume/Vipul_Sureka_SeniorDataAnalyst.pdf" type="application/pdf" width="100%" height="100%" />
-    </div>
+    <embed src="https://vipul-sureka.github.io/resume/Vipul_Sureka_SeniorDataAnalyst.pdf" type="application/pdf" />
 </body>
 </html>
