--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipul Sureka's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -44,15 +45,32 @@
 
         <section id="skills" class="section">
             <h2>Skills</h2>
-            <ul>
-                <li>Data Science</li>
-                <li>Python</li>
-                <li>SQL</li>
-                <li>PowerBI</li>
-                <li>Machine Learning</li>
-                <li>Excel</li>
-                <li>Azure</li>
-            </ul>
+            <div class="skills-container">
+                <div class="skill-tile">
+                    <i class="fab fa-python skill-logo"></i>
+                    <p>Python</p>
+                </div>
+                <div class="skill-tile">
+                    <i class="fas fa-database skill-logo"></i>
+                    <p>SQL</p>
+                </div>
+                <div class="skill-tile">
+                    <i class="fas fa-chart-bar skill-logo"></i>
+                    <p>Power BI</p>
+                </div>
+                <div class="skill-tile">
+                    <i class="fas fa-robot skill-logo"></i>
+                    <p>Machine Learning</p>
+                </div>
+                <div class="skill-tile">
+                    <i class="fas fa-file-excel skill-logo"></i>
+                    <p>Excel</p>
+                </div>
+                <div class="skill-tile">
+                    <i class="fab fa-microsoft skill-logo"></i>
+                    <p>Azure</p>
+                </div>
+            </div>
         </section>
 
         <section id="education" class="section">
