--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipul Sureka's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -22,8 +23,8 @@
                     <li><a href="#education">Education</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="resume.html">Resume</a></li> <!-- Link to new resume page -->
-                    <li><a href="#projects">Personal Projects</a></li> <!-- Link to projects section -->
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="#projects">Personal Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -47,31 +48,31 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/data-science.png" alt="Data Science">
+                    <i class="fas fa-database"></i>
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/python.png" alt="Python">
+                    <i class="fab fa-python"></i>
                     <p>Python</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/sql.png" alt="SQL">
+                    <i class="fas fa-table"></i>
                     <p>SQL</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/power-bi.png" alt="PowerBI">
+                    <i class="fas fa-chart-bar"></i>
                     <p>PowerBI</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/machine-learning.png" alt="Machine Learning">
+                    <i class="fas fa-robot"></i>
                     <p>Machine Learning</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/excel.png" alt="Excel">
+                    <i class="fas fa-file-excel"></i>
                     <p>Excel</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/azure.png" alt="Azure">
+                    <i class="fab fa-azure"></i>
                     <p>Azure</p>
                 </div>
             </div>
