--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <i class="fas fa-database"></i>
+                    <i class="fas fa-chart-line"></i> <!-- Data Science -->
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fab fa-python"></i>
+                    <i class="fab fa-python"></i> <!-- Python -->
                     <p>Python</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-table"></i>
+                    <i class="fas fa-database"></i> <!-- SQL -->
                     <p>SQL</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-chart-bar"></i>
-                    <p>PowerBI</p>
+                    <i class="fas fa-chart-pie"></i> <!-- Power BI -->
+                    <p>Power BI</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-robot"></i>
+                    <i class="fas fa-robot"></i> <!-- Machine Learning -->
                     <p>Machine Learning</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-file-excel"></i>
+                    <i class="fas fa-file-excel"></i> <!-- Excel -->
                     <p>Excel</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fab fa-azure"></i>
+                    <i class="fab fa-microsoft"></i> <!-- Azure -->
                     <p>Azure</p>
                 </div>
             </div>
