--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <i class="fas fa-chart-line"></i> <!-- Data Science -->
+                    <i class="fas fa-chart-network"></i> <!-- Data Science -->
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
@@ -60,11 +60,11 @@
                     <p>SQL</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-chart-pie"></i> <!-- Power BI -->
+                    <i class="fas fa-chart-bar"></i> <!-- Power BI -->
                     <p>Power BI</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-robot"></i> <!-- Machine Learning -->
+                    <i class="fas fa-cogs"></i> <!-- Machine Learning -->
                     <p>Machine Learning</p>
                 </div>
                 <div class="skill-tile">
