--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <i class="fas fa-database"></i> <!-- Data Science (Generic Data Icon) -->
+                    <i class="fas fa-chart-line"></i> <!-- Data Science -->
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
@@ -72,7 +72,7 @@
                     <p>Excel</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fab fa-microsoft"></i> <!-- Azure -->
+                    <i class="fas fa-cloud" style="font-size: 30px;"></i> <!-- Azure -->
                     <p>Azure</p>
                 </div>
             </div>
