--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        .skills-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        .skill-tile {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100px; /* Set a uniform width */
+            margin: 10px; /* Add some space between tiles */
+            text-align: center;
+        }
         .skill-tile img {
             width: 50px; /* Set uniform width */
             height: 50px; /* Set uniform height */
@@ -14,6 +28,7 @@
         .azure-icon {
             width: 50px; /* Ensure uniform size */
             height: 50px; /* Ensure uniform size */
+            filter: brightness(0); /* Make the icon black */
         }
     </style>
 </head>
