--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <i class="fas fa-chart-line"></i> <!-- Data Science -->
+                    <img src="https://img.icons8.com/ios-filled/50/000000/data-science.png" alt="Data Science">
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fab fa-python"></i> <!-- Python -->
+                    <img src="https://img.icons8.com/ios-filled/50/000000/python.png" alt="Python">
                     <p>Python</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-database"></i> <!-- SQL -->
+                    <img src="https://img.icons8.com/ios-filled/50/000000/sql.png" alt="SQL">
                     <p>SQL</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-signal"></i> <!-- Power BI -->
+                    <img src="https://img.icons8.com/ios-filled/50/000000/power-bi.png" alt="PowerBI">
                     <p>Power BI</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-brain"></i> <!-- Machine Learning -->
+                    <img src="https://img.icons8.com/ios-filled/50/000000/machine-learning.png" alt="Machine Learning">
                     <p>Machine Learning</p>
                 </div>
                 <div class="skill-tile">
-                    <i class="fas fa-file-excel"></i> <!-- Excel -->
+                    <img src="https://img.icons8.com/ios-filled/50/000000/excel.png" alt="Excel">
                     <p>Excel</p>
                 </div>
                 <div class="skill-tile">
