--- a/index.html
+++ b/index.html
@@ -5,33 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipul Sureka's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .skills-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center; /* Center the tiles */
-            max-width: 600px; /* Limit width for symmetry */
-            margin: auto; /* Center the container */
-        }
-        .skill-tile {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 100px; /* Set a uniform width */
-            margin: 10px; /* Add some space between tiles */
-            text-align: center;
-        }
-        .skill-tile img, .skill-tile i {
-            width: 50px; /* Set uniform width */
-            height: 50px; /* Set uniform height */
-        }
-        .azure-icon {
-            width: 50px; /* Ensure uniform size */
-            height: 50px; /* Ensure uniform size */
-            filter: brightness(0); /* Make the icon black */
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -74,31 +48,31 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/data-science.png" alt="Data Science">
+                    <i class="fas fa-database"></i> <!-- Data Science (Generic Data Icon) -->
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/python.png" alt="Python">
+                    <i class="fab fa-python"></i> <!-- Python -->
                     <p>Python</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/sql.png" alt="SQL">
+                    <i class="fas fa-database"></i> <!-- SQL -->
                     <p>SQL</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/power-bi.png" alt="PowerBI">
+                    <i class="fas fa-signal"></i> <!-- Power BI -->
                     <p>Power BI</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/machine-learning.png" alt="Machine Learning">
+                    <i class="fas fa-brain"></i> <!-- Machine Learning -->
                     <p>Machine Learning</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://img.icons8.com/ios-filled/50/000000/excel.png" alt="Excel">
+                    <i class="fas fa-file-excel"></i> <!-- Excel -->
                     <p>Excel</p>
                 </div>
                 <div class="skill-tile">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/Microsoft_Azure_Logo.svg" alt="Azure" class="azure-icon"> <!-- Azure -->
+                    <i class="fab fa-microsoft"></i> <!-- Azure -->
                     <p>Azure</p>
                 </div>
             </div>
