--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-tile">
-                    <i class="fas fa-database"></i> <!-- Data Science (Generic Data Icon) -->
+                    <i class="fas fa-chart-line"></i> <!-- Data Science -->
                     <p>Data Science</p>
                 </div>
                 <div class="skill-tile">
@@ -77,6 +77,9 @@
                 </div>
             </div>
         </section>
+
+
+
 
         <section id="education" class="section">
             <h2>Education</h2>
