--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <a href="projects/web-scraping.html" class="know-more">Know More</a>
                 </div>
                 <div class="project-tile">
-                    <img src="https://via.placeholder.com/200x150?text=Olympics+Dataset+Analysis" alt="Olympics Dataset Analysis" class="project-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6ZxY_DU8sOrMC_GE4b_1cPq1ng831FNhaKA&s" alt="Olympics Dataset Analysis" class="project-image">
                     <h3>Olympics Dataset Analysis</h3>
                     <p>In-depth analysis of Olympic Games data using Python and Pandas.</p>
                     <a href="projects/olympics-dataset.html" class="know-more">Know More</a>
