--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <a href="projects/ipl-eda.html" class="know-more">Know More</a>
                 </div>
                 <div class="project-tile">
-                    <img src="https://via.placeholder.com/200x150?text=Autonomous+Vehicle+System" alt="Autonomous Vehicle System" class="project-image">
+                    <img src="https://media.licdn.com/dms/image/v2/C4E1BAQHexR3MbNmAuQ/company-background_10000/company-background_10000/0/1585062499424/rugved_systems_cover?e=2147483647&v=beta&t=yr15Ktn26JJIL1ckjZr1V5O-I4Hi9u1bOgEnPiZBoEw" alt="Autonomous Vehicle System" class="project-image">
                     <h3>Autonomous Vehicle System</h3>
                     <p>Developed a model for vehicle navigation using machine learning techniques.</p>
                     <a href="projects/autonomous-vehicle.html" class="know-more">Know More</a>
