--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2>Personal Projects</h2>
             <div class="projects-container">
                 <div class="project-tile">
-                    <img src="https://via.placeholder.com/200x150?text=Web+Scraping" alt="Web Scraping" class="project-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAGbeWuq4wXYHc_fUKRadQn_Y-5nRVSCC2YQ&s" alt="Web Scraping" class="project-image">
                     <h3>Web Scraping</h3>
                     <p>Automated data extraction from websites using Python and BeautifulSoup.</p>
                     <a href="projects/web-scraping.html" class="know-more">Know More</a>
