--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Vipul Sureka's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .project-image {
+            width: 300px; /* Set the desired width */
+            height: auto; /* Maintain aspect ratio */
+            object-fit: cover; /* Optionally, to ensure the images fit well */
+        }
+    </style>
 </head>
 <body>
     <header>
