--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <main>
         <section id="home" class="section">
-            <p>Welcome to my portfolio. I am a Consultant at Deloitte India with a passion for data science, sports, and Indian history.</p>
+            <p>Vipul is a consultant at Deloitte India with more than four years of experience delivering data-driven solutions to global FMCG clients. He collaborates with diverse teams, creating insightful dashboards and reports while streamlining complex processes. Vipul has also led a student project in Autonomous Vehicles, winning national competitions and developing skills in leadership and management. Passionate about data, AI, and ML, he enjoys music and sports in his free time. Feel free to connect with him for data solutions or a game of cricket!</p>
         </section>
 
         <section id="services" class="section">
