--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <script>
-    const texts = ["Vipul Sureka", "a Data Professional"];
+    const texts = ["Vipul Sureka.", "a Data Professional."];
     let index = 0;
     let charIndex = 0;
     const speed = 150; // typing speed
