--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -191,4 +191,201 @@
         <p>&copy; 2024 Vipul Sureka. All rights reserved.</p>
     </footer>
 </body>
+</html> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vipul Sureka | Data Consultant at Deloitte</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Vipul Sureka – Data Consultant at Deloitte with 5 years of experience in Analytics, Power BI, SQL, Python, and AI.">
+  <meta name="keywords" content="Vipul Sureka, Data Analyst, Deloitte, Power BI, SQL, Python, Analytics">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            accent: "#38bdf8",
+            purple: "#a855f7",
+            dark: "#050505"
+          }
+        }
+      }
+    }
+  </script>
+
+  <style>
+    body {
+      background: #050505;
+      color: white;
+      font-family: 'Inter', sans-serif;
+    }
+
+    .glass {
+      background: rgba(30,41,59,0.4);
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(255,255,255,0.08);
+    }
+
+    .gradient-text {
+      background: linear-gradient(135deg,#38bdf8,#a855f7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  </style>
+</head>
+
+<body>
+
+<!-- NAVBAR -->
+<nav class="fixed w-full top-0 z-50 glass">
+  <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+    <span class="font-bold text-xl">&lt;Vipul/&gt;</span>
+    <div class="hidden md:flex gap-8 text-sm">
+      <a href="#about" class="hover:text-accent">About</a>
+      <a href="#skills" class="hover:text-accent">Skills</a>
+      <a href="#projects" class="hover:text-accent">Projects</a>
+      <a href="resume.html" class="hover:text-accent">Resume</a>
+      <a href="#contact" class="bg-accent text-black px-4 py-2 rounded-full font-semibold">Contact</a>
+    </div>
+  </div>
+</nav>
+
+<!-- HERO -->
+<section class="min-h-screen flex items-center justify-center px-6">
+  <div class="text-center max-w-4xl">
+    <img src="assets/images/dp.png" class="w-36 h-36 mx-auto rounded-full border-4 border-accent mb-6"/>
+    <h1 class="text-5xl md:text-7xl font-extrabold">
+      Vipul <span class="gradient-text">Sureka</span>
+    </h1>
+    <p class="mt-4 text-xl text-gray-300">
+      Consultant at <span class="text-white font-semibold">Deloitte</span> | Data, Analytics & AI
+    </p>
+
+    <div class="mt-8 flex justify-center gap-4">
+      <a href="assets/pdf/Vipul_Sureka_Data_Analyst_5Years.pdf" class="bg-white text-black px-6 py-3 rounded-lg font-bold">
+        Download Resume
+      </a>
+      <a href="#projects" class="glass px-6 py-3 rounded-lg">
+        View Projects
+      </a>
+    </div>
+
+    <div class="mt-10 flex justify-center gap-6 text-2xl text-gray-400">
+      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="mailto:vipulsureka@gmail.com"><i class="fas fa-envelope"></i></a>
+    </div>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="py-20 px-6">
+  <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+    <div>
+      <h2 class="text-3xl font-bold mb-4">About Me</h2>
+      <p class="text-gray-300 leading-relaxed">
+        I am a Consultant at Deloitte India with 5 years of experience delivering
+        analytics-driven solutions for global clients. My expertise lies in
+        Power BI, SQL, Python, and data-driven decision making.
+        <br><br>
+        I enjoy working at the intersection of data, business, and AI, and I am
+        constantly expanding my skillset in advanced analytics and machine learning.
+      </p>
+    </div>
+
+    <div class="glass p-8 rounded-2xl">
+      <ul class="space-y-3 text-gray-300">
+        <li><strong>Role:</strong> Consultant</li>
+        <li><strong>Company:</strong> Deloitte</li>
+        <li><strong>Experience:</strong> 5 Years</li>
+        <li><strong>Focus:</strong> Analytics & AI</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- SKILLS -->
+<section id="skills" class="py-20 bg-slate-900/50 px-6">
+  <div class="max-w-6xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-10">Technical Skills</h2>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+      <div class="glass p-6 rounded-xl">Python</div>
+      <div class="glass p-6 rounded-xl">SQL</div>
+      <div class="glass p-6 rounded-xl">Power BI</div>
+      <div class="glass p-6 rounded-xl">Excel</div>
+      <div class="glass p-6 rounded-xl">Machine Learning</div>
+      <div class="glass p-6 rounded-xl">Azure</div>
+      <div class="glass p-6 rounded-xl">Data Science</div>
+      <div class="glass p-6 rounded-xl">Analytics</div>
+    </div>
+  </div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="py-20 px-6">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-3xl font-bold text-center mb-12">Projects</h2>
+    <div class="grid md:grid-cols-2 gap-8">
+
+      <div class="glass p-6 rounded-xl">
+        <h3 class="font-bold text-xl mb-2">IPL Win Predictor</h3>
+        <p class="text-gray-400 text-sm">Machine learning based win probability predictor.</p>
+      </div>
+
+      <div class="glass p-6 rounded-xl">
+        <h3 class="font-bold text-xl mb-2">Olympics Data Analysis</h3>
+        <p class="text-gray-400 text-sm">Exploratory analysis of Olympics datasets.</p>
+      </div>
+
+      <div class="glass p-6 rounded-xl">
+        <h3 class="font-bold text-xl mb-2">Web Scraping Project</h3>
+        <p class="text-gray-400 text-sm">Data extraction using Python & BeautifulSoup.</p>
+      </div>
+
+      <div class="glass p-6 rounded-xl">
+        <h3 class="font-bold text-xl mb-2">Autonomous Vehicle System</h3>
+        <p class="text-gray-400 text-sm">Award-winning academic AI project.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="py-20 bg-black px-6 text-center">
+  <h2 class="text-3xl font-bold mb-6">Let’s Connect</h2>
+  <p class="text-gray-400 mb-8">
+    Open to discussions on data, analytics, and AI.
+  </p>
+  <a href="mailto:vipulsureka@gmail.com" class="bg-accent text-black px-8 py-4 rounded-lg font-bold">
+    Get in Touch
+  </a>
+</section>
+
+<footer class="py-6 text-center text-gray-500 text-sm">
+  © 2025 Vipul Sureka · Built with Data & Passion
+</footer>
+
+</body>
 </html>
+
