--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -449,6 +443,68 @@
                             <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2018 - 2019</span>
                             <p class="mt-2 text-gray-300 text-sm">
                                 Started professional journey focusing on data cleaning, validation, and creating foundational PowerBI reports for client audits.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Timeline Item 4 -->
+                <div class="relative pl-8 md:pl-0 reveal">
+                    <div class="md:flex items-center justify-between flex-row-reverse">
+                        <div class="hidden md:block w-1/2 pl-8 text-left">
+                            <h3 class="text-xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
+                            <p class="text-data-accent">Manipal Institute of Technology, Manipal</p>
+                        </div>
+                        <div class="absolute left-[-5px] md:left-1/2 md:ml-[-5px] w-3 h-3 bg-blue-400 rounded-full border-2 border-black ring-4 ring-blue-400/20"></div>
+                        <div class="md:w-1/2 md:pr-8 md:text-right">
+                            <div class="md:hidden mb-2">
+                                <h3 class="text-xl font-bold text-white">B.Tech – Mechanical Engineering</h3>
+                                <p class="text-data-accent">Manipal Institute of Technology, Manipal</p>
+                            </div>
+                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2016 – 2020</span>
+                            <p class="mt-2 text-gray-300 text-sm">
+                                Completed undergraduate studies with strong fundamentals in engineering, analytics, and problem-solving.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Timeline Item 5 -->
+                <div class="relative pl-8 md:pl-0 reveal">
+                    <div class="md:flex items-center justify-between">
+                        <div class="hidden md:block w-1/2 pr-8 text-right">
+                            <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
+                            <p class="text-data-accent">Tata Steel</p>
+                        </div>
+                        <div class="absolute left-[-5px] md:left-1/2 md:ml-[-5px] w-3 h-3 bg-green-400 rounded-full border-2 border-black ring-4 ring-green-400/20"></div>
+                        <div class="md:w-1/2 md:pl-8">
+                            <div class="md:hidden mb-2">
+                                <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
+                                <p class="text-data-accent">Tata Steel</p>
+                            </div>
+                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">Jun 2019 – Jul 2019</span>
+                            <p class="mt-2 text-gray-300 text-sm">
+                                Gained hands-on exposure to industrial operations, process optimization, and engineering best practices.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Timeline Item 6 -->
+                <div class="relative pl-8 md:pl-0 reveal">
+                    <div class="md:flex items-center justify-between flex-row-reverse">
+                        <div class="hidden md:block w-1/2 pl-8 text-left">
+                            <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
+                            <p class="text-data-accent">RUGVED Systems</p>
+                        </div>
+                        <div class="absolute left-[-5px] md:left-1/2 md:ml-[-5px] w-3 h-3 bg-pink-400 rounded-full border-2 border-black ring-4 ring-pink-400/20"></div>
+                        <div class="md:w-1/2 md:pr-8 md:text-right">
+                            <div class="md:hidden mb-2">
+                                <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
+                                <p class="text-data-accent">RUGVED Systems</p>
+                            </div>
+                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2017 – 2019</span>
+                            <p class="mt-2 text-gray-300 text-sm">
+                                Worked on electrical systems, electronics integration, and hands-on engineering projects alongside academics.
                             </p>
                         </div>
                     </div>
