--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                 <h3 class="text-xl font-bold text-white">Analyst</h3>
                                 <p class="text-data-accent">Deloitte</p>
                             </div>
-                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2018 - 2019</span>
+                            <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2020 - 2022</span>
                             <p class="mt-2 text-gray-300 text-sm">
                                 Started professional journey focusing on data cleaning, validation, and creating foundational PowerBI reports for client audits.
                             </p>
@@ -463,6 +463,7 @@
                             <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2016 – 2020</span>
                             <p class="mt-2 text-gray-300 text-sm">
                                 Completed undergraduate studies with strong fundamentals in engineering, analytics, and problem-solving.
+                                CGPA-8.32
                             </p>
                         </div>
                     </div>
@@ -479,11 +480,11 @@
                         <div class="md:w-1/2 md:pl-8">
                             <div class="md:hidden mb-2">
                                 <h3 class="text-xl font-bold text-white">Engineering Trainee</h3>
-                                <p class="text-data-accent">Tata Steel</p>
+                                <p class="text-data-accent">Tata Steel, Jamshedpur</p>
                             </div>
                             <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">Jun 2019 – Jul 2019</span>
                             <p class="mt-2 text-gray-300 text-sm">
-                                Gained hands-on exposure to industrial operations, process optimization, and engineering best practices.
+                                Worked majorly in the mills maintenance department to improve the reliability of the Pneumatic System in the CRM area.
                             </p>
                         </div>
                     </div>
@@ -500,11 +501,11 @@
                         <div class="md:w-1/2 md:pr-8 md:text-right">
                             <div class="md:hidden mb-2">
                                 <h3 class="text-xl font-bold text-white">Electrical & Electronics Engineer</h3>
-                                <p class="text-data-accent">RUGVED Systems</p>
+                                <p class="text-data-accent">RUGVED Systems, Manipal</p>
                             </div>
                             <span class="text-sm font-mono text-gray-500 bg-slate-800 px-2 py-1 rounded">2017 – 2019</span>
                             <p class="mt-2 text-gray-300 text-sm">
-                                Worked on electrical systems, electronics integration, and hands-on engineering projects alongside academics.
+                                Led the design, integration, and testing of the vehicle’s electronic systems, including power distribution, sensor interfacing (LiDAR, GPS, IMU), motor controllers, and embedded computing (NVIDIA Jetson TX2). Developed robust PCBs and ensured EMI-safe wiring layouts. Collaborated closely with software and mechanical teams to ensure seamless sensor data acquisition and actuator control. Oversaw system diagnostics, fail-safes, and real-time telemetry. Contributed to overall system architecture, safety standards, and successful competition deployment.
                             </p>
                         </div>
                     </div>
